# AllenOS

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/libstd/: Assert.hpp  CMakeLists.txt  Comparable.hpp  Container.cpp  Container.hpp  List.hpp  Macros.hpp  MemoryBlock.cpp  MemoryBlock.hpp  Sequence.hpp  Singleton.hpp  Types.hpp  Vector.hpp
lib/libstd/include/: Macros.hpp  Singleton.hpp  Types.hpp  Vector.hpp
src/: main.cpp
